<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@drawable/main_background_gradient"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/ivWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvError"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="30dp"
        android:drawableStart="@drawable/ic_cancel"
        android:drawablePadding="10dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:text="@string/incorrect_password_user_message"
        android:background="@drawable/bg_round_bottom_radius_8"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_radius_32"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcome">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutUser"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginBottom="30dp"
                    android:id="@+id/tvLabelChooseUniversity"
                    app:layout_constraintBottom_toTopOf="@+id/layoutUniversity"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/choose_university"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/bg_edittext_stroke"
                    android:id="@+id/layoutUniversity"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginStart="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_student_hat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/open_university"
                        android:id="@+id/tvUniversity"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="#333333"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp" />

                    <ImageView
                        android:layout_marginEnd="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/layoutPassword"
            android:background="@drawable/bg_edittext_stroke"
            android:id="@+id/layoutUser"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_student_hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/user"
                android:id="@+id/etUser"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="#828282"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />


        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
            android:background="@drawable/bg_edittext_stroke"
            android:id="@+id/layoutPassword"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_student_hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginEnd="10dp"
                android:hint="@string/password"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:background="@color/white"
                android:textColor="#828282"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/btnSignIn"
            android:text="@string/sign_in"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/layoutLanguage"
            android:backgroundTint="#E45F5D"
            android:stateListAnimator="@null"
            android:background="@drawable/bg_rounded_button_8"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            tools:targetApi="lollipop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/labelIni"
            android:id="@+id/layoutLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/languageGeorgia"
                android:background="@drawable/bg_rounded_button_8"
                android:textColor="#5C5C5C"
                android:textSize="12sp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="16dp"
                android:drawablePadding="5dp"
                android:text="ქართული"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                app:drawableStartCompat="@drawable/ic_georgia" />

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/languageEnglish"
                android:background="@drawable/bg_rounded_button_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="#5C5C5C"
                android:textSize="12sp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="16dp"
                android:drawablePadding="5dp"
                android:text="ინგლისური"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                app:drawableStartCompat="@drawable/ic_united_kingdom" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/labelIni"
            android:drawablePadding="5dp"
            android:textSize="12sp"
            android:textColor="#5C5C5C"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/app_condition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_ini" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/backGround"
        android:visibility="visible"
        android:background="#33000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintEnterPin"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="20dp"
            android:text="@string/enter_pin"
            app:layout_constraintBottom_toTopOf="@+id/txt_pin_entry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.alimuzaffar.lib.pin.PinEntryEditText
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/txt_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:password="true"
            android:inputType="numberPassword"
            app:pinCharacterMask="*"
            android:maxLength="4"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1983348292862214/2306017720">
    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>